--- a/src/fonts/style.css
+++ b/src/fonts/style.css
@@ -35,7 +35,7 @@
     font-style: italic;
 }
 @font-face {
-    font-family: 'Roboto';
+    font-family: 'RobotoMedium';
     src: local('Roboto Medium'), local('Roboto-Medium'), url('Robotomedium.woff2') format('woff2'), url('Robotomedium.woff') format('woff'), url('Robotomedium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
