--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -22,6 +22,7 @@
     transform: rotate(90deg) translate(94px, 94px);
     width: 463px !important;
     height: 276px !important;
+    transition: .5s;
 }
 .phone-bg {
     width: 276px;
@@ -42,6 +43,10 @@
     flex-direction: column;
     transition: .5s;
     overflow: hidden;
+}
+.rotate-components .android-content {
+    width: inherit !important;
+    height: inherit !important;
 }
 .main-app-box{
     margin-top: auto;
@@ -139,4 +144,352 @@
     margin-right: 16px;
     margin-top: 6px;
 }
-  
+
+/*ANDROID*/
+.topbar-andr {
+    width: inherit;
+    height: 17px;
+    display: flex;
+    background: #2d72c1;
+}
+.topbar-andr .left-topbar {
+    margin-left: auto;
+    display: flex;
+    align-items: center;    
+}
+.left-topbar .elements-bar {
+    width: 20px;
+    height: 20px;
+    /* background: url(../img/android/icons/wifi.svg) no-repeat;
+    filter: brightness(0) saturate(100%) invert(100%); */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: -4px
+}
+.left-topbar .battery-info {
+    font-size: 12px;
+    margin-right: 3px;
+    font-family: "RobotoRegular";
+    color: #fff;
+    margin-left: 4px;
+}
+/*UMenu*/
+.uni-menu {
+    width: inherit;
+    height: 442px;
+    overflow: hidden;
+}
+.u-title {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    background: #4794eb;
+}
+.menu-list {
+    width: 13px;
+    height: 9px;
+    background: url(../img/android/icons/menu.png) no-repeat;
+    margin-left: 10px;
+}
+.u-texttittle {
+    font-family: "RobotoMedium";
+    color: #fff;
+    font-size: 14px;
+    margin-left: 15px;
+}
+.u-li-menu {
+    width: inherit;
+    height: 409px;
+    background: #ffffffdb;
+    overflow: hidden;
+}
+.u-menu-l {
+    min-height: 50px;
+    width: inherit;
+    display: flex;
+    align-items: center;
+}
+.l-title {
+    margin-left: 30px;
+}
+.txt-title {
+    font-family: "RobotoRegular";
+    margin-bottom: 2px;
+    color: #3a3a3a;
+    font-size: 12px;
+}
+.txt-lasttitle {
+    font-family: "Roboto";
+    color: #919191;
+    font-size: 10px;
+}
+.u-l-arrow {
+    width: 16px;
+    height: 20px;
+    background-size: 20px;
+    background-position: center;
+    background: url(../img/android/icons/arrow-menu.svg) no-repeat;
+    margin-left: auto;
+    transform: rotate(180deg);
+    margin-right: 10px;
+}
+/* style chekbox */
+
+ul, li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.tg-list {
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+.tg-list-item {
+    margin: 0 2em;
+}
+h2 {
+    color: #777;
+}
+h4 {
+    color: #999;
+}
+.tgl {
+    display: none;
+}
+.tgl, .tgl:after, .tgl:before, .tgl *, .tgl *:after, .tgl *:before, .tgl + .tgl-btn {
+    box-sizing: border-box;
+}
+.tgl::selection, .tgl:after::selection, .tgl:before::selection, .tgl *::selection, .tgl *:after::selection, .tgl *:before::selection, .tgl + .tgl-btn::selection {
+    background: none;
+}
+.tgl + .tgl-btn {
+    display: flex;
+    margin-left: auto;
+    margin-right: 10px;
+    outline: 0;
+    display: block;
+    width: 33px;
+    height: 12px;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+}
+.tgl + .tgl-btn:after, .tgl + .tgl-btn:before {
+    position: relative;
+    display: block;
+    content: "";
+    width: 50%;
+    height: 100%;
+}
+.tgl + .tgl-btn:after {
+    left: 0;
+}
+.tgl + .tgl-btn:before {
+    display: none;
+}
+.tgl:checked + .tgl-btn:after {
+    left: 50%;
+}
+.tgl-light + .tgl-btn {
+    background: #cecece;
+    border-radius: 2em;
+    padding: 0px;
+    transition: all 0.4s ease;
+}
+.tgl-light + .tgl-btn:after {
+    border-radius: 50%;
+    background: #fff;
+    transition: all 0.2s ease;
+    width: 18px;
+    height: 18px;
+    top: -3px;
+    box-shadow: 0px 3px 9px 0px rgba(0, 0, 0, 0.25);
+
+}
+.tgl-light:checked + .tgl-btn {
+    background: #4694eb;
+}
+.tgl-ios + .tgl-btn {
+    background: #fbfbfb;
+    border-radius: 2em;
+    padding: 2px;
+    transition: all 0.4s ease;
+    border: 1px solid #e8eae9;
+}
+.tgl-ios + .tgl-btn:after {
+    border-radius: 2em;
+    background: #fbfbfb;
+    transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.3s ease, margin 0.3s ease;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 4px 0 rgba(0, 0, 0, .08);
+}
+.tgl-ios + .tgl-btn:hover:after {
+    will-change: padding;
+}
+.tgl-ios + .tgl-btn:active {
+    box-shadow: inset 0 0 0 2em #e8eae9;
+}
+.tgl-ios + .tgl-btn:active:after {
+    padding-right: 0.8em;
+}
+.tgl-ios:checked + .tgl-btn {
+    background: #86d993;
+}
+.tgl-ios:checked + .tgl-btn:active {
+    box-shadow: none;
+}
+.tgl-ios:checked + .tgl-btn:active:after {
+    margin-left: -0.8em;
+}
+.tgl-skewed + .tgl-btn {
+    overflow: hidden;
+    transform: skew(-10deg);
+    backface-visibility: hidden;
+    transition: all 0.2s ease;
+    font-family: sans-serif;
+    background: #888;
+}
+.tgl-skewed + .tgl-btn:after, .tgl-skewed + .tgl-btn:before {
+    transform: skew(10deg);
+    display: inline-block;
+    transition: all 0.2s ease;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    line-height: 2em;
+    font-weight: bold;
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .4);
+}
+.tgl-skewed + .tgl-btn:after {
+    left: 100%;
+    content: attr(data-tg-on);
+}
+.tgl-skewed + .tgl-btn:before {
+    left: 0;
+    content: attr(data-tg-off);
+}
+.tgl-skewed + .tgl-btn:active {
+    background: #888;
+}
+.tgl-skewed + .tgl-btn:active:before {
+    left: -10%;
+}
+.tgl-skewed:checked + .tgl-btn {
+    background: #86d993;
+}
+.tgl-skewed:checked + .tgl-btn:before {
+    left: -100%;
+}
+.tgl-skewed:checked + .tgl-btn:after {
+    left: 0;
+}
+.tgl-skewed:checked + .tgl-btn:active:after {
+    left: 10%;
+}
+.tgl-flat + .tgl-btn {
+    padding: 2px;
+    transition: all 0.2s ease;
+    background: #fff;
+    border: 4px solid #f2f2f2;
+    border-radius: 2em;
+}
+.tgl-flat + .tgl-btn:after {
+    transition: all 0.2s ease;
+    background: #f2f2f2;
+    content: "";
+    border-radius: 1em;
+}
+.tgl-flat:checked + .tgl-btn {
+    border: 4px solid #7fc6a6;
+}
+.tgl-flat:checked + .tgl-btn:after {
+    left: 50%;
+    background: #7fc6a6;
+}
+.tgl-flip + .tgl-btn {
+    padding: 2px;
+    transition: all 0.2s ease;
+    font-family: sans-serif;
+    perspective: 100px;
+}
+.tgl-flip + .tgl-btn:after, .tgl-flip + .tgl-btn:before {
+    display: inline-block;
+    transition: all 0.4s ease;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    line-height: 2em;
+    font-weight: bold;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    border-radius: 4px;
+}
+.tgl-flip + .tgl-btn:after {
+    content: attr(data-tg-on);
+    background: #02c66f;
+    transform: rotateY(-180deg);
+}
+.tgl-flip + .tgl-btn:before {
+    background: #ff3a19;
+    content: attr(data-tg-off);
+}
+.tgl-flip + .tgl-btn:active:before {
+    transform: rotateY(-20deg);
+}
+.tgl-flip:checked + .tgl-btn:before {
+    transform: rotateY(180deg);
+}
+.tgl-flip:checked + .tgl-btn:after {
+    transform: rotateY(0);
+    left: 0;
+    background: #7fc6a6;
+}
+.tgl-flip:checked + .tgl-btn:active:after {
+    transform: rotateY(20deg);
+}
+
+/* style chekbox */
+
+.block {      
+    position: relative;    
+}
+.block::before,
+.block::after {
+    content: '';
+    position: absolute; left: -20px;  top: 20px;   
+    border: 20px solid transparent;	
+    border-right: 80px solid #f00;
+    border-radius: 180px;   
+}
+.block::after {
+    border: 18px solid transparent;
+    border-right: 70px solid #F2C255;
+    top: 22px;
+    left: -10px;    
+}
+.иконка {
+    border-radius: 5px;
+    background-color: rgb(0, 42, 80);
+    position: absolute;
+    left: 1588px;
+    top: 632px;
+    width: 46px;
+    height: 49px;
+    z-index: 79;
+  }
+  .top {
+    border-radius: 50%;
+    background-color: rgb(241, 241, 241);
+    box-shadow: 0px 3px 9px 0px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    left: 886px;
+    top: 108px;
+    width: 60px;
+    height: 60px;
+    z-index: 35;
+  }
