--- a/src/components/editorplayer/css/editorplayer.css
+++ b/src/components/editorplayer/css/editorplayer.css
@@ -82,7 +82,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "RobotoRegular";
+    font-family: "Roboto";
     color: rgb(72, 185, 242);
     font-size: 18px;
 }
@@ -143,7 +143,7 @@
 }
 .box-change .box-title {
     margin-bottom: 12px;
-    font-family: "RobotoRegular";
+    font-family: "Roboto";
     font-size: 18px;
     color: rgb(72, 185, 242);      
 }
@@ -161,7 +161,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "RobotoRegular";
+    font-family: "Roboto";
     font-size: 16px;
     color: rgb(60, 60, 60);
 }
