--- a/src/components/hud/css/hud.css
+++ b/src/components/hud/css/hud.css
@@ -375,7 +375,7 @@
     text-align: right;
     font-size: 12px;
     color: #fff;
-    font-family: 'RobotoRegular';
+    font-family: 'Roboto';
 }
 .span-bold {
     font-family: 'RobotoBlack';
