-- Добавлен bg флаг для ID card

--- a/src/components/idcard/css/idcard.css
+++ b/src/components/idcard/css/idcard.css
@@ -22,6 +22,8 @@
 }
 .idcard_box .plash_right{
     width: 402px;
+    background: url(../img/bg-flag.png) no-repeat;
+    background-position: 69px 31px;
     background-color: rgb(255, 255, 255);
     height: inherit;
     display: flex;
