--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -738,3 +738,164 @@ h4 {
     align-items: center;
     padding: 10px 0px;
 }
+.rotate-components .phonebook-content {
+    width: inherit !important;
+    height: inherit !important;
+}
+.phonebook-content {
+    width: inherit;
+    height: 409px;
+    display: flex;
+    flex-direction: column;
+}
+.phonebook-content .b-bar {
+    width: inherit;
+    background: #2A56C6;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.24), 0px 0px 4px rgba(0, 0, 0, 0.12);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    z-index: 1;
+}
+.b-bar .b-search {
+    width: 264.5px;
+    height: 37px;
+    background: #fff;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 0px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 2px;
+    margin-top: 6px;
+    display: flex;
+    align-items: center;
+}
+.b-search .b-imgsearch {
+    margin-left: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.b-search .b-inputtext {
+    margin-left: 7px;
+    width: 205px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.38);
+    display: flex;
+    align-items: flex-end;
+}
+.b-bar .b-tabsbar{
+    width: inherit;
+    height: 25px;
+    display: flex;
+    margin-top: 19.5px;
+}
+.b-tabsbar .b-tabs-radio {
+    width: 92.25px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    
+}
+.b-tabs-radio .material-icons.md-dark {
+    color: #ffffff8a !important;
+}
+.b-tabsbar input[type="radio"]:checked + .b-tabs-radio .material-icons.md-dark {
+    color: #fff !important;
+}
+.b-tabsbar input[type="radio"]:checked + label.b-tabs-radio {
+    border-bottom: 2px solid #fff;
+    color: #fff !important;
+}
+.b-callhistory {
+    width: inherit;
+    height: 322px;
+    background: #fff;
+    overflow: scroll;
+}
+.title-b-hist {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.54);
+    margin-top: 8px;
+    margin-left: 12px;
+}
+.b-box-history {
+    margin-top: 10px;
+    margin-left: 6px;
+    display: flex;
+    flex-direction: column;
+}
+.b-box-player {
+    width: 264.5px;
+    height: 49px;
+    margin-bottom: 6px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.24), 0px 0px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 2px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.b-img-player {
+    width: 30.75px;
+    height: 30.75px;
+    border-radius: 50%;
+    margin-left: 6px;
+}
+.b-info-playercall {
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+}
+.b-inf-name {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.87);
+}
+.b-inf-data {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.539261);
+    display: flex;
+    align-items: center;
+}
+.b-call {
+    margin-left: auto;
+    margin-right: 12px;
+}
+.c-contact-box {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 24px;
+}
+.c-contact-box .c-player-contact {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 94%;
+    margin-bottom: 16px;
+    margin-left: 18px;
+}
+.c-player-contact .c-imgplayer {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+.c-player-contact .c-nameplayer {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.87);
+}
+.his {
+    color: #000;
+}
