--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -723,6 +723,53 @@ h4 {
     height: 24px;
     background: url(../img/android/icons/s-bluetooh.svg) no-repeat;
 }
+.s-fleeca {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/fleeca.png) no-repeat center;
+    background-size: 24px;
+    /*filter: invert(100%);*/
+}
+.s-maze {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/maze.png) no-repeat center;
+    background-size: 24px;
+    /*filter: invert(100%);*/
+}
+.s-blaine {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/blaine.png) no-repeat center;
+    background-size: 24px;
+    /*filter: invert(100%);*/
+}
+.s-pacific {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/pacific.png) no-repeat center;
+    background-size: 24px;
+}
+.s-invader {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/invader.png) no-repeat center;
+    background-size: 24px;
+    /*filter: invert(100%);*/
+}
+.s-car {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/car.png) no-repeat center;
+    background-size: 24px;
+}
+.s-community {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/community.png) no-repeat center;
+    background-size: 24px;
+}
+
 .umenu-title-family {
     margin-top: 11px;
     margin-left: 16px;
@@ -744,6 +791,10 @@ h4 {
     display: flex;
     align-items: center;
     padding: 10px 0px;
+    transition: 0.3s;
+}
+.hoverable .umenu-mini-box:hover {
+    background: #4794eb26 !important;
 }
 .rotate-components .phonebook-content {
     width: inherit !important;
