--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -769,6 +769,18 @@ h4 {
     background: url(../img/android/icons/community.png) no-repeat center;
     background-size: 24px;
 }
+.s-green {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/green.png) no-repeat center;
+    background-size: 24px;
+}
+.s-red {
+    width: 24px;
+    height: 24px;
+    background: url(../img/android/icons/red.png) no-repeat center;
+    background-size: 24px;
+}
 
 .umenu-title-family {
     margin-top: 11px;
