--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -626,6 +626,19 @@ h4 {
     height: 100px;
     background: #fff;
 }
+
+.mobile-profile-1 {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: auto;
+}
+.mobile-profile-1 .m-player-photo-1  {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
 .mobile-profile {
     display: flex;
     align-items: center;
