--- a/src/components/phone/css/phone.css
+++ b/src/components/phone/css/phone.css
@@ -651,6 +651,7 @@ h4 {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    object-fit: cover;
     /*margin-left: 10%;*/
 }
 .mobile-profile .m-player-info {
